src/tests/fail-else-if-empty-predicate.err
Fatal error: exception Eqeq.Error("line 8 (char 16): ')'")
